--- a/pom.xml
+++ b/pom.xml
@@ -123,37 +123,52 @@
 
 
     </dependencies>
-    <!-- <build>
-       <plugins>
-            <plugin>
-                &lt;!&ndash;Mybatis-generator插件,用于自动生成Mapper和POJO&ndash;&gt;
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.1</version>
-                <configuration>
-                    &lt;!&ndash;配置文件的位置&ndash;&gt;
-                    <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
-                    <verbose>true</verbose>
-                    <overwrite>true</overwrite>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>Generate MyBatis Artifacts</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.mybatis.generator</groupId>
-                        <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.6</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-</build>-->
+    <build>
+        <!--解决默认情况下不发布源码中的xml文件-->
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+<!--
+                    <include>**/*.properties</include>
+-->
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
+    <!--  <build>
+        <plugins>
+             <plugin>
+                 &lt;!&ndash;Mybatis-generator插件,用于自动生成Mapper和POJO&ndash;&gt;
+                 <groupId>org.mybatis.generator</groupId>
+                 <artifactId>mybatis-generator-maven-plugin</artifactId>
+                 <version>1.3.1</version>
+                 <configuration>
+                     &lt;!&ndash;配置文件的位置&ndash;&gt;
+                     <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
+                     <verbose>true</verbose>
+                     <overwrite>true</overwrite>
+                 </configuration>
+                 <executions>
+                     <execution>
+                         <id>Generate MyBatis Artifacts</id>
+                         <goals>
+                             <goal>generate</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+                 <dependencies>
+                     <dependency>
+                         <groupId>org.mybatis.generator</groupId>
+                         <artifactId>mybatis-generator-core</artifactId>
+                         <version>1.3.6</version>
+                     </dependency>
+                 </dependencies>
+             </plugin>
+         </plugins>
+ </build>-->
 
     <properties>
         <dao.target.dir>src/main/java</dao.target.dir>
