--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc_driver=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/sgdp?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://140.143.238.70:3306/sgdp?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=root
 jdbc_password=root
 
