--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,24 @@
             <artifactId>druid</artifactId>
             <version>1.1.9</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <!-- 映入JSON -->
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.jackson</groupId>-->
+            <!--<artifactId>jackson-mapper-asl</artifactId>-->
+            <!--<version>1.9.13</version>-->
+        <!--</dependency>-->
 
+        <!--<dependency>-->
+            <!--<groupId>net.sf.json-lib</groupId>-->
+            <!--<artifactId>json-lib</artifactId>-->
+            <!--<version>2.4</version>-->
+            <!--<classifier>jdk15</classifier>-->
+        <!--</dependency>-->
 
         <!--解决错误：nested exception is java.lang.IllegalArgumentException: No converter found for return value of type: class java.util.ArrayList
         这是因为springmvc默认是没有对象转换成json的转换器的，需要手动添加jackson依赖。-->
@@ -121,6 +138,12 @@
             <version>${jackson.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.0.4</version>
+        </dependency>
 
     </dependencies>
     <build>
