--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,75 @@
          version="3.1">
     <!-- 默认首页定义 -->
     <welcome-file-list>
-        <welcome-file>/</welcome-file>
+        <welcome-file>login</welcome-file>
     </welcome-file-list>
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
+
+    <!-- 初始化参数，引入log4j配置
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:log4j.xml</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>60000</param-value>
+    </context-param>
+
+    &lt;!&ndash; 开启德鲁伊stat过滤,WebStatFilter用于采集web-jdbc关联监控的数据，注意放在其它的过滤器以及dispatcher前面，很重哦 &ndash;&gt;
+    <filter>
+        <filter-name>DruidWebStatFilter</filter-name>
+        <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+        <init-param>
+            <param-name>exclusions</param-name>
+            <param-value>/static/*,*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+        </init-param>
+        &lt;!&ndash; 下面的所有的init－param可以不用配置，使用默认值即可，如果你有处女座情结，删除即可 &ndash;&gt;
+        &lt;!&ndash; 缺省sessionStatMaxCount是1000个。你可以按需要进行配置 &ndash;&gt;
+        <init-param>
+            <param-name>sessionStatMaxCount</param-name>
+            <param-value>1000</param-value>
+        </init-param>
+        &lt;!&ndash; druid 0.2.7版本开始支持profile，配置profileEnable能够监控单个url调用的sql列表 &ndash;&gt;
+        <init-param>
+            <param-name>profileEnable</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        &lt;!&ndash;
+        <init-param>
+            <param-name>principalSessionName</param-name>
+            <param-value>users.username</param-value>
+        </init-param> &ndash;&gt;
+
+        &lt;!&ndash; 你可以关闭session统计功能 &ndash;&gt;
+        &lt;!&ndash;
+        <init-param>
+            <param-name>sessionStatEnable</param-name>
+            <param-value>true</param-value>
+        </init-param> &ndash;&gt;
+    </filter>
+    <filter-mapping>
+        <filter-name>DruidWebStatFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+-->
+    <!--this listener must be defined before the spring listener-->
+    <!--<listener>-->
+        <!--<listener-class>com.alibaba.dubbo.remoting.http.servlet.BootstrapListener</listener-class>-->
+    <!--</listener>-->
+
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <!-- log4j监听器 -->
+  <!--  <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>-->
 
     <!--配置SpringMVC分发器，拦截所有请求-->
     <servlet>
@@ -44,6 +103,29 @@
         <filter-name>encoding</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-
+<!--
+    &lt;!&ndash; 德鲁伊监控平台监控器 &ndash;&gt;
+    <servlet>
+        <servlet-name>DruidStatView</servlet-name>
+        <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+        <init-param>
+            &lt;!&ndash; 允许清空统计数据 &ndash;&gt;
+            <param-name>resetEnable</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            &lt;!&ndash; 用户名 &ndash;&gt;
+            <param-name>loginUsername</param-name>
+            <param-value>druid</param-value>
+        </init-param>
+        <init-param>
+            &lt;!&ndash; 密码 &ndash;&gt;
+            <param-name>loginPassword</param-name>
+            <param-value>druid</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DruidStatView</servlet-name>
+        <url-pattern>/druid/*</url-pattern>
+    </servlet-mapping>-->
 </web-app>
