列表自定义排序

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 jdbc_driver=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://140.143.238.70:3306/sgdp?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_username=root
-jdbc_password=root
+jdbc_username=sgdp
+jdbc_password=yfzx8888@sgdp
 
 validationQuery= select 1
